Query Vm resources of the service (#1802)